contrast error fix

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -80,4 +80,6 @@ p {
 a { 
   color: blue;
   font-size: x-large;
+  background-color: white;
+  padding: 3px;
 }
